--- a/config/database.example.yml
+++ b/config/database.example.yml
@@ -24,8 +24,8 @@ default: &default
 development:
   <<: *default
   database: jungle_development
-  username: development
-  password: development
+  # username: development
+  # password: development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
